# kopitra

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  Taskfile.yml  compose.yaml
.github/workflows/: ci-cd.yml
admin-site/: admin-site.sln
admin-site/admin-api/: AdminApi.csproj  Function1.cs  ServiceCollectionExtension.cs
admin-site/admin-api-test/: AdminApi.Tests.csproj  DistributionGroupTests.cs  EventFlowTestsBase.cs  IdRegistriesTests.cs  UnitTest1.cs
admin-site/admin-api/Domain/: EventFlowOptionsExtensions.cs
admin-site/admin-api/Properties/: launchSettings.json  serviceDependencies.kopitra-test - Zip Deploy.json
admin-site/website/: .gitignore  package-lock.json  package.json
admin-site/website/src/: App.tsx  Dashboard.stories.tsx  Dashboard.tsx  i18nProvider.ts  models.ts  posts.tsx
docs/: README.md  handoff-notes.md  integration-test-plan.md  management-control.md  standards.md
docs/deployment/: container-app-troubleshooting.md
docs/infra/: bicep-offline.md
ea/: AGENTS.md  KopitraAgent.mq4  KopitraAgent.mq5  KopitraLib.mqh  TODO.md
ea-server/: Cargo.toml
ea-server/src/: application.rs  config.rs  domain.rs  main.rs  persist.rs  queries.rs  services.rs  state.rs  testing.rs
ea-server/src/models/: todo.rs
ea-server/src/routes/: messages.rs  openapi.rs  session.rs
ea-server/src/services/: messages.rs  mod.rs  openapi.rs  session.rs  todo.rs
functions/: .gitignore  AGENTS.md  Dockerfile  Function1.cs  Functions.csproj  Functions.sln
functions/src/Functions/: HealthReporter.cs
functions/src/Kopitra.Cqrs/: ServiceCollectionExtensions.cs
functions/src/Kopitra.ManagementApi/: Kopitra.ManagementApi.csproj  Program.cs
functions/tests/Functions.Tests/: HealthReporterTests.cs
functions/tests/Kopitra.ManagementApi.Tests/: Kopitra.ManagementApi.Tests.csproj  ManagementApiTestServiceProvider.cs  TestAccessTokenValidator.cs  TestClock.cs
gateway/: AGENTS.md  Cargo.toml  Dockerfile  TODO.md
gateway/src/: admin.rs  lib.rs  main.rs
gateway/tests/: acceptance_copy_trading.rs  health_check.rs  session_flow.rs
infra/: container-app.bicep  main.bicep
infra/bicep/: containerapps.bicep  cosmosdb.bicep  keyvault-assignments.bicep  keyvault.bicep  servicebus.bicep  sql.bicep
infra/parameters/: dev.json
mql/: docker-compose.yml
mql/docker/: Dockerfile
mql/src/KopiLib/: ApiClient.mqh  Dictionary.mqh  HttpClient.mqh  Json.mqh  List.mqh  Queue.mqh  Stack.mqh
opsconsole/: AGENTS.md  Dockerfile.integration  README.md  eslint.config.js  package-lock.json  package.json  prettier.config.mjs  vite.config.ts  vitest.integration.config.ts
opsconsole/docs/: navigation-plan.md
opsconsole/src/: App.css  App.stories.tsx  App.tsx  index.css  main.tsx
opsconsole/src/api/: authStorage.ts  fetchAdminUserDetail.test.ts  fetchAdminUserDetail.ts  fetchAdminUsers.test.ts  fetchAdminUsers.ts  fetchConsoleNavigation.test.ts  fetchConsoleNavigation.ts  fetchCopyGroupDetail.test.ts  fetchCopyGroupDetail.ts  fetchCopyGroupSummaries.test.ts  fetchCopyGroupSummaries.ts  fetchCopyTradeFunnel.test.ts  fetchCopyTradeFunnel.ts  fetchCopyTradePerformanceAggregates.test.ts  fetchCopyTradePerformanceAggregates.ts  fetchCurrentUser.test.ts  fetchCurrentUser.ts  fetchDashboardActivities.test.ts  fetchDashboardActivities.ts  fetchDashboardMetrics.test.ts  fetchDashboardMetrics.ts  fetchDashboardTrends.test.ts  fetchDashboardTrends.ts  fetchOperationsCommandEvents.test.ts  fetchOperationsCommandEvents.ts  fetchOperationsCommandPresets.test.ts  fetchOperationsCommandPresets.ts  fetchOperationsHealth.test.ts  fetchOperationsHealth.ts  fetchOperationsIncidents.test.ts  fetchOperationsIncidents.ts  fetchOperationsPerformanceTrends.test.ts  fetchOperationsPerformanceTrends.ts  fetchTradeAgentDetail.test.ts  fetchTradeAgentDetail.ts  fetchTradeAgentSession.test.ts  fetchTradeAgentSession.ts  fetchTradeAgents.test.ts  fetchTradeAgents.ts  opsConsoleSnapshot.ts  (+3 more)
opsconsole/src/contexts/: AuthProvider.tsx  auth-context.ts  index.ts  useAuthorization.ts
opsconsole/src/data/: console.ts
opsconsole/src/hooks/: useActivitiesFilter.test.ts  useActivitiesFilter.ts  useDashboardFilters.test.tsx  useDashboardFilters.ts
opsconsole/web/: README.md  eslint.config.js  package-lock.json  package.json
servicebus-emulator/: AGENTS.md  Cargo.toml  Dockerfile
servicebus-emulator/src/: main.rs
specs/: ea-interaction-api.yml
tests/acceptance/: Cargo.toml  Dockerfile
tests/acceptance/tests/: copy_trading.rs
tests/playwright/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  tsconfig.json
(+302 files in other folders)
