[package]
name = "ea-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
eventually = { version = "0.5.0", features = ["full"], git = "https://github.com/get-eventually/eventually-rs" }
eventually-macros = { version = "0.1.0", git = "https://github.com/get-eventually/eventually-rs" }
ntex = { version = "1.0", features = ["tokio"] }
rust_decimal = "1.34.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.57"
tokio = { version ="1.37.0", features = ["macros", "rt"] }
utoipa = "4"
utoipa-swagger-ui = "6.0.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
