[package]
name = "ea-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
cqrs-es = "0.4.10"
ntex = { version = "1.0", features = ["tokio"] }
postgres-es = "0.4.10"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["full"] }
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
