[package]
name = "ea-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
cqrs-es = "0.4.10"
ntex = { version = "2.0", features = ["tokio"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
thiserror = "1.0.61"
