[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["serde", "macros"] }
sha2 = "0.10"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
