[package]
name = "acceptance"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["macros", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.19"
sha2 = "0.10"
